AKS scripting/VIYA4/project/deploy/franceavv/sas-bases/overlays/network/istio/components/sas-text-parsing/resources.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-parse-execution-provider
spec:
  host: sas-parse-execution-provider
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /parseExecutionProvider/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-parsing
spec:
  host: sas-parsing
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /parsing/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-text-parsing
    sas.com/admin: namespace
  name: sas-parse-execution-provider
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /parseExecutionProvider
    - uri:
        prefix: /parseExecutionProvider/
    route:
    - destination:
        host: sas-parse-execution-provider
    timeout: 300s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-text-parsing
    sas.com/admin: namespace
  name: sas-parsing
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /parsing
    - uri:
        prefix: /parsing/
    route:
    - destination:
        host: sas-parsing
    timeout: 300s
